salesforce-port/force-app/main/default/objects/Expense_Split__c/Expense_Split__c.object-meta.xml
<CustomObject>
    <label>Expense Split</label>
    <nameField>
        <displayFormat>SPL-{000000}</displayFormat>
        <label>Split Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>