salesforce-port/force-app/main/default/objects/Expense_Split__c/fields/Parent_Expense__c.field-meta.xml
<CustomField>
    <fullName>Parent_Expense__c</fullName>
    <label>Parent Expense</label>
    <type>MasterDetail</type>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Splits</relationshipLabel>
    <relationshipName>Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>