salesforce-port/force-app/main/default/objects/Expense_Split__c/fields/Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Split_Amount__c</fullName>
    <label>Split Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>