salesforce-port/force-app/main/default/objects/Expense_Split__c/fields/Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Split_Percentage__c</fullName>
    <label>Split Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>