salesforce-port/force-app/main/default/objects/Expense_Split__c/fields/Split_User__c.field-meta.xml
<CustomField>
    <fullName>Split_User__c</fullName>
    <label>Split User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Expense Splits</relationshipLabel>
    <relationshipName>Expense_Splits</relationshipName>
    <required>true</required>
</CustomField>